<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="empty_string" translatable="false"></string>
    <string name="dash_string" translatable="false">-</string>
    <string name="activator_string" translatable="false">activator</string>
    <string name="app_name">PhoneProfiles</string>
    <string name="menu_edit_profiles">Editor</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_phone_profiles">PhoneProfiles</string>
    <string name="title_activity_profile_preferences">Profile preferences</string>
    <string name="title_activity_event_preferences">Event preferences</string>
    <string name="menu_new_profile">New profile</string>
    <string name="menu_delete_all_profiles">Delete all profiles</string>
    <string name="menu_new_event">New event</string>
    <string name="menu_delete_all_events">Delete all events</string>
    <string name="profiles_header_profile_name_no_activated">No profile activated</string>
    <string name="profile_name_default">Profile</string>
    <string name="event_name_default">Event</string>
    <string name="profile_context_item_edit">Edit</string>
    <string name="profile_context_item_delete">Delete</string>
    <string name="profile_string_0">Profile</string>
    <string name="event_string_0">Event</string>
    <string name="delete_profile_alert_message">Delete profile?</string>
    <string name="delete_event_alert_message">Delete event?</string>
    <string name="toast_profile_activated_0">Profile</string>
    <string name="toast_profile_activated_1">activated</string>
    <string name="preference_profile_no_change">Do not change</string>
    <string name="title_activity_phone_profiles_preferences">Application Settings</string>
    <string name="menu_exit">Exit</string>
    <string name="activate_profile_alert_message">Activate profile?</string>
    <string name="brightness_pref_dialog_no_change_chb">Do not change</string>
    <string name="brightness_pref_dialog_automatic_chb">Automatic</string>
    <string name="volume_pref_dialog_no_change_chb">Do not change</string>
    <string name="phone_profiles_pref_category_activator">Activator</string>
    <string name="phone_profiles_pref_category_editor">Editor</string>
    <string name="phone_profiles_pref_category_gui">Application interface</string>
    <string name="phone_profiles_pref_category_activation">Profile activation</string>
    <string name="phone_profiles_pref_category_start">Application start</string>
    <string name="phone_profiles_pref_category_notifications">Notifications</string>
    <string name="phone_profiles_pref_applicationActivate">Activate profile on startup</string>
    <string name="phone_profiles_pref_applicationClose">Close after activating profile</string>
    <string name="phone_profiles_pref_applicationPrefIndicator">Preferences indicator</string>
    <string name="phone_profiles_pref_applicationHeader">Show activated profile</string>
    <string name="phone_profiles_pref_applicationAlert">Confirm activating profile</string>
    <string name="phone_profiles_pref_notificationsToast">Show toast notification</string>
    <string name="phone_profiles_pref_notificationStatusBar">Show status bar notification</string>
    <string name="phone_profiles_pref_notificationStatusBarStyle">Notification icon style</string>
    <string name="profile_preferences_category_profileIdentification">Profile identification</string>
    <string name="profile_preferences_category_volumes">Volumes</string>
    <string name="profile_preferences_category_sounds">Sounds</string>
    <string name="profile_preferences_profileName">Profile name</string>
    <string name="profile_preferences_profileIcon">Profile icon</string>
    <string name="profile_preferences_volumeRingtone">Ringtone volume</string>
    <string name="profile_preferences_volumeNotification">Notification volume</string>
    <string name="profile_preferences_volumeMedia">Media volume</string>
    <string name="profile_preferences_volumeAlarm">Alarm volume</string>
    <string name="profile_preferences_volumeSystem">System volume</string>
    <string name="profile_preferences_soundRingtoneChange">Change ringtone</string>
    <string name="profile_preferences_soundRingtone">Ringtone sound</string>
    <string name="profile_preferences_soundNotificationChange">Change notification</string>
    <string name="profile_preferences_soundNotification">Notification sound</string>
    <string name="profile_preferences_soundAlarmChange">Change alarm</string>
    <string name="profile_preferences_soundAlarm">Alarm sound</string>
    <string name="profile_preferences_deviceAirplaneMode">(R) Airplane mode</string>
    <string name="profile_preferences_deviceWiFi">Wi-Fi</string>
    <string name="profile_preferences_deviceBluetooth">Bluetooth</string>
    <string name="profile_preferences_deviceGPS">(G1)(R) GPS</string>
    <string name="profile_preferences_deviceNFC">(G1)(R) NFC</string>
    <string name="profile_preferences_deviceScreenTimeout">Screen timeout</string>
    <string name="profile_preferences_deviceBrightness">Screen brightness</string>
    <string name="profile_preferences_deviceWallpaper">Wallpaper</string>
    <string name="profile_preferences_deviceWallpaperChange">Change wallpaper</string>
    <string name="array_pref_no_change">Do not change</string>
    <string name="array_pref_hardwareModeArray_on">On</string>
    <string name="array_pref_hardwareModeArray_off">Off</string>
    <string name="array_pref_hardwareModeArray_toggle">Toggle</string>
    <string name="array_pref_screenTimeoutArray_15seconds">15 seconds</string>
    <string name="array_pref_screenTimeoutArray_30seconds">30 seconds</string>
    <string name="array_pref_screenTimeoutArray_1minute">1 minute</string>
    <string name="array_pref_screenTimeoutArray_2minutes">2 minutes</string>
    <string name="array_pref_screenTimeoutArray_10minutes">10 minutes</string>
    <string name="phone_profiles_pref_applicationLanguage">Language</string>
    <string name="phone_profiles_pref_applicationLanguage_system">System</string>
    <string name="phone_profiles_pref_applicationLanguage_en" translatable="false">English</string>
    <string name="phone_profiles_pref_applicationLanguage_sk" translatable="false">Slovenčina</string>
    <string name="phone_profiles_pref_applicationLanguage_cs" translatable="false">Čeština</string>
    <string name="phone_profiles_pref_applicationLanguage_de" translatable="false">Deutsch</string>
    <string name="phone_profiles_pref_applicationLanguage_ru" translatable="false">Русский</string>
    <string name="phone_profiles_pref_applicationLanguage_ca" translatable="false">Català</string>
    <string name="phone_profiles_pref_applicationLanguage_es" translatable="false">Español</string>
    <string name="phone_profiles_pref_applicationLanguage_uk" translatable="false">Українська</string>
    <string name="phone_profiles_pref_applicationLanguage_it" translatable="false">Italiano</string>
    <string name="phone_profiles_pref_applicationLanguage_fr" translatable="false">Français</string>
    <string name="phone_profiles_pref_applicationLanguage_pl" translatable="false">Polski</string>
    <string name="phone_profiles_pref_applicationStartOnBoot">Start on phone boot</string>
    <string name="menu_export">Backup settings</string>
    <string name="menu_import">Restore settings</string>
    <string name="phone_profiles_pref_notificationStatusBarStyle_android">Native</string>
    <string name="phone_profiles_pref_applicationLongClickActivation">Long-press to activate profile</string>
    <string name="phone_profiles_pref_applicationTheme">Application theme</string>
    <string name="phone_profiles_pref_applicationWidgetBackground">Background opaqueness</string>
    <string name="phone_profiles_pref_applicationWidgetLightnessB">Background lightness</string>
    <string name="phone_profiles_pref_applicationWidgetLightnessT">Text lightness</string>
    <string name="phone_profiles_pref_applicationWidgetLightnessI">Icon lightness</string>
    <string name="phone_profiles_pref_applicationWidgetIconColor">Icon color type</string>
    <string name="phone_profiles_pref_notificationPrefIndicator">Show preferences indicator</string>
    <string name="phone_profiles_pref_applicationEventBackgroundProfile">Default profile</string>
    <string name="phone_profiles_pref_applicationGridLayout">Grid layout</string>
    <string name="phone_profiles_pref_notificationStatusBarPermanent">Ongoing notification</string>
    <string name="phone_profiles_pref_notificationStatusBarCancel">Cancel after</string>
    <string name="phone_profiles_pref_applicationWidgetIconHideProfileName">Hide profile name (widget)</string>
    <string name="phone_profiles_pref_notificationShowInStatusBar">Show in status bar</string>
    <string name="phone_profiles_pref_category_system">System</string>
    <string name="phone_profiles_pref_applicationUnlinkRingerNotificationVolumes">Unlink ringer and notification volumes</string>
    <string name="info_notification_title">Important information</string>
    <string name="menu_import_export">Backup/Restore</string>
    <string name="profile_preferences_category_activation_duration">Activation duration</string>
    <string name="profile_preferences_category_sound_profile">Sound profile</string>
    <string name="profile_preferences_category_radios">Radios</string>
    <string name="profile_preferences_category_screen">Screen</string>
    <string name="profile_preferences_category_others">Others</string>
    <string name="phone_profiles_pref_applicationBatteryOptimization">Battery optimization</string>
    <string name="menu_about_application">About application</string>
    <string name="phone_profiles_pref_applicationBatteryOptimization_summary">Add PhoneProfiles to \"Not optimized\" if you encounter problems with event profile activation, or if you leave your device unplugged and stationary for a period of time with the screen off.</string>
    <string name="profile_preferences_category_profileActivationParameters">Activation parameters</string>
    <string name="profile_preferences_category_profileDeviceParameters">Device parameters</string>
    <string name="phone_profiles_pref_applicationUnlinkRingerNotificationVolumes_summary">Your device has linked volumes for ringtone and notifications. If you want unlinked volumes, enable this parameter.</string>
    <string name="profile_preferences_preferenceTypesInfo_title">Type of preferences</string>
    <string name="profile_preferences_hideStatusBarIcon">Hide status bar icon</string>
    <string name="phone_profiles_pref_applicationForceSetMergeRingNotificationVolumes">Set volumes link</string>
    <string name="array_pref_forceSetMergeRingNotificationVolumes_keepDetected">Maintain detection</string>
    <string name="phone_profiles_pref_applicationForceSetMergeRingNotificationVolumes_info">Use this if volume link detection is wrong.</string>
    <string name="profile_preferences_category_touchEffects">Touch effects</string>
    <string name="phone_profiles_pref_category_widget_list">Widget: List</string>
    <string name="phone_profiles_pref_category_widget_icon_shortcut">Widget: Icon; Shortcut</string>
    <string name="menu_dark_theme_on">Switch on dark theme</string>
    <string name="phone_profiles_pref_applicationPowerParametersCategory">Battery and power</string>
    <string name="profile_preferences_preferenceTypesInfo_summary">Click here to show information about types of preferences: (G1), (R), (S), (I).</string>
    <string name="menu_export_and_email">Backup and e-mail settings</string>
    <string name="menu_export_and_email_to_author">Backup and e-mail settings to author</string>
    <string name="menu_email_debug_logs_to_author">E-mail debug log files to author</string>
    <string name="menu_support">Support</string>
    <string name="menu_email_to_author">E-mail to author</string>
</resources>