<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    app:key="rootScreen"
    app:title="@string/title_activity_profile_preferences">

    <PreferenceCategory
        app:title="@string/profile_preferences_category_profileIdentification"
        app:iconSpaceReserved="false" >
        <EditTextPreference
            app:key="prf_pref_profileName"
            app:summary="@string/profile_preferences_profileName"
            app:title="@string/profile_preferences_profileName"
            android:selectAllOnFocus="true"
            app:defaultValue="Profil"
            app:iconSpaceReserved="false" />
        <sk.henrichg.phoneprofiles.ProfileIconPreferenceX
            app:defaultValue="ic_profile_default|1|0|0"
            app:key="prf_pref_profileIcon"
            app:title="@string/profile_preferences_profileIcon"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="prf_pref_activationParametersCategory"
        app:title="@string/profile_preferences_category_profileActivationParameters"
        app:iconSpaceReserved="false" >

        <Preference
            app:title="@string/profile_preferences_category_activation_duration"
            app:key="prf_pref_activationDurationCategoryRoot"
            app:widgetLayout="@layout/start_activity_preference"
            app:iconSpaceReserved="false"
            app:fragment="sk.henrichg.phoneprofiles.ProfilesPrefsActivity$ProfilesPrefsActivationDuration" />

        <SwitchPreferenceCompat
            app:key="prf_pref_hideStatusBarIcon"
            app:title="@string/profile_preferences_hideStatusBarIcon"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:title="@string/profile_preferences_category_profileDeviceParameters"
        app:iconSpaceReserved="false" >

        <sk.henrichg.phoneprofiles.InfoDialogPreferenceX
            app:key="prf_pref_preferenceTypesInfo"
            app:title="@string/profile_preferences_preferenceTypesInfo_title"
            app:summary="@string/profile_preferences_preferenceTypesInfo_summary"
            app:infoText="@string/empty_string"
            app:widgetLayout="@layout/info_preference_clickable"
            app:iconSpaceReserved="false" />

        <Preference
            app:title="@string/profile_preferences_category_sound_profile"
            app:key="prf_pref_soundProfileCategoryRoot"
            app:widgetLayout="@layout/start_activity_preference"
            app:iconSpaceReserved="false"
            app:fragment="sk.henrichg.phoneprofiles.ProfilesPrefsActivity$ProfilesPrefsSoundProfiles" />

        <Preference
            app:title="@string/profile_preferences_category_volumes"
            app:key="prf_pref_volumeCategoryRoot"
            app:widgetLayout="@layout/start_activity_preference"
            app:iconSpaceReserved="false"
            app:fragment="sk.henrichg.phoneprofiles.ProfilesPrefsActivity$ProfilesPrefsVolumes"  />

        <Preference
            app:title="@string/profile_preferences_category_sounds"
            app:key="prf_pref_soundsCategoryRoot"
            app:widgetLayout="@layout/start_activity_preference"
            app:iconSpaceReserved="false"
            app:fragment="sk.henrichg.phoneprofiles.ProfilesPrefsActivity$ProfilesPrefsSounds" />

        <Preference
            app:title="@string/profile_preferences_category_touchEffects"
            app:key="prf_pref_touchEffectsCategoryRoot"
            app:widgetLayout="@layout/start_activity_preference"
            app:iconSpaceReserved="false"
            app:fragment="sk.henrichg.phoneprofiles.ProfilesPrefsActivity$ProfilesPrefsTouchEffects" />

        <Preference
            app:title="@string/profile_preferences_category_radios"
            app:key="prf_pref_radiosCategoryRoot"
            app:widgetLayout="@layout/start_activity_preference"
            app:iconSpaceReserved="false"
            app:fragment="sk.henrichg.phoneprofiles.ProfilesPrefsActivity$ProfilesPrefsRadios" />

        <Preference
            app:title="@string/profile_preferences_category_screen"
            app:key="prf_pref_screenCategoryRoot"
            app:widgetLayout="@layout/start_activity_preference"
            app:iconSpaceReserved="false"
            app:fragment="sk.henrichg.phoneprofiles.ProfilesPrefsActivity$ProfilesPrefsScreen" />

        <Preference
            app:title="@string/profile_preferences_category_others"
            app:key="prf_pref_othersCategoryRoot"
            app:widgetLayout="@layout/start_activity_preference"
            app:iconSpaceReserved="false"
            app:fragment="sk.henrichg.phoneprofiles.ProfilesPrefsActivity$ProfilesPrefsOthers" />
        
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>