<?xml version="1.0" encoding="utf-8"?>
<androidx.preference.PreferenceScreen
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:key="categorySystem"
    app:title="@string/phone_profiles_pref_category_system">

    <PreferenceCategory
        app:key="applicationUnlinkRingerNotificationVolumesCategory"
        app:title="@string/phone_profiles_pref_applicationUnlinkRingerNotificationVolumes"
        app:iconSpaceReserved="false" >
        <Preference
            app:key="applicationUnlinkRingerNotificationVolumesInfo"
            app:title="@string/empty_string"
            app:summary="@string/phone_profiles_pref_applicationUnlinkRingerNotificationVolumes_summary"
            app:widgetLayout="@layout/info_preference"
            app:iconSpaceReserved="false" />-
        <SwitchPreferenceCompat
            app:key="applicationUnlinkRingerNotificationVolumes"
            app:title="@string/phone_profiles_pref_applicationUnlinkRingerNotificationVolumes"
            app:defaultValue="false"
            app:iconSpaceReserved="false" />
        <Preference
            app:key="applicationForceSetMergeRingNotificationVolumesInfo"
            app:title="@string/phone_profiles_pref_applicationForceSetMergeRingNotificationVolumes"
            app:summary="@string/phone_profiles_pref_applicationForceSetMergeRingNotificationVolumes_info"
            app:widgetLayout="@layout/info_preference"
            app:iconSpaceReserved="false" />
        <ListPreference
            app:key="applicationForceSetMergeRingNotificationVolumes"
            app:title="@string/phone_profiles_pref_applicationForceSetMergeRingNotificationVolumes"
            app:summary="@string/array_pref_forceSetMergeRingNotificationVolumes_keepDetected"
            app:defaultValue="0"
            app:entries="@array/forceSetMergeRingNotificationVolumesArray"
            app:entryValues="@array/forceSetMergeRingNotificationVolumesValues"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="applicationPowerParametersCategory"
        app:title="@string/phone_profiles_pref_applicationPowerParametersCategory"
        app:iconSpaceReserved="false" >
        <Preference
            app:key="applicationBatteryOptimization"
            app:title="@string/phone_profiles_pref_applicationBatteryOptimization"
            app:summary="@string/phone_profiles_pref_applicationBatteryOptimization_summary"
            app:widgetLayout="@layout/start_activity_preference"
            app:iconSpaceReserved="false">
        </Preference>
        <Preference
            app:key="applicationPowerManager"
            app:title="@string/phone_profiles_pref_applicationPowerManager"
            app:summary="@string/phone_profiles_pref_applicationPowerManager_summary"
            app:widgetLayout="@layout/start_activity_preference"
            app:iconSpaceReserved="false">
        </Preference>
    </PreferenceCategory>

</androidx.preference.PreferenceScreen>