<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:henrichg="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/important_info"
          android:title="@string/info_notification_title"
          android:orderInCategory="190"
          henrichg:showAsAction="always"
          android:icon="?attr/actionHelpIcon"/>
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="200"
        henrichg:showAsAction="never" />
    <item android:id="@+id/menu_install_tone"
          android:title="@string/menu_install_tone"
          android:orderInCategory="202"
          henrichg:showAsAction="never" />
    <item android:id="@+id/menu_pphelper_uninstall"
        android:title="@string/menu_phoneprofilehepler_uninstall"
        android:orderInCategory="206"
        henrichg:showAsAction="never" />
    <item android:id="@+id/menu_export"
        android:title="@string/menu_export"
        android:orderInCategory="210"
        henrichg:showAsAction="never" />
    <item android:id="@+id/menu_import"
        android:title="@string/menu_import"
        android:orderInCategory="220"
        henrichg:showAsAction="never" />
    <item android:id="@+id/menu_about"
          android:title="@string/menu_about_application"
          android:orderInCategory="235"
          henrichg:showAsAction="never" />
    <item android:id="@+id/menu_exit"
        android:title="@string/menu_exit"
        android:orderInCategory="240"
        henrichg:showAsAction="never" />
</menu>
